--- a/gesture/TouchGesture.html
+++ b/gesture/TouchGesture.html
@@ -5,8 +5,8 @@
     <title>手势密码</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="jquery.mobile-1.4.5.min.css">
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="jquery.mobile-1.4.5.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 </head>
 <body>
     <div data-role="page">
