--- a/sector/RadarScan.html
+++ b/sector/RadarScan.html
@@ -17,8 +17,6 @@
 <body>
     <canvas id="arcCanvas" height="300" width="300"></canvas>
     <canvas id="ppiCanvas" height="300" width="300"></canvas>
-    <script type="text/javascript" src="sector.js"></script>
-    <script type="text/javascript" src="drawArc.js"></script>
-    <script type="text/javascript" src="start.js"></script>
+    <script data-main="./pages/index.js" src="./lib/require.js"></script>
 </body>
 </html>
